--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,17 @@
     <string name="archived">Page Archived</string>
     <string name="archive_error">Error Archiving Page</string>
     <string name="archiving">Archving Page</string>
+    <string name="setup_sync">Setup Sync</string>
+    <string name="sync">Sync</string>
+    <string name="prefs">Settings</string>
+    <string name="not_set">Sync not setup</string>
+    <string name="more_by_author">Other apps by Quuux Software</string>
+    <string name="about">Knapsack</string>
+    <string name="version">version 1.0</string>
+    <string name="pref_sync">Chrome Browser Sync</string>
+    <string name="pref_about">About</string>
+    <string name="signed_in">Signed into sync</string>
+    <string name="sign_in">Sign in to sync</string>
 
 
     <string-array name="more">
