--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="pref_about">About</string>
     <string name="signed_in">Signed into sync</string>
     <string name="sign_in">Sign in to sync</string>
+    <string name="no_network">Network is not available</string>
 
 
     <string-array name="more">
