--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,11 +7,11 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="read"></string>
     <string name="unread">New</string>
-    <string name="notification_title">Archiving Page</string>
-    <string name="notification_text">Archiving - %s</string>
-    <string name="archived">Page Archived</string>
-    <string name="archive_error">Error Archiving Page</string>
-    <string name="archiving">Archiving Page</string>
+    <string name="notification_title">Saving Page</string>
+    <string name="notification_text">Saving - %s</string>
+    <string name="archived">Page Saved</string>
+    <string name="archive_error">Error Saving Page</string>
+    <string name="archiving">Saving Page</string>
     <string name="setup_sync">Setup Sync</string>
     <string name="sync">Sync</string>
     <string name="prefs">Settings</string>
@@ -48,10 +48,10 @@
     <string name="delete_page_message">Are you sure you want to delete this page from your knapsack</string>
     <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
-    <string name="archive_page_title">Archive Page</string>
-    <string name="archive_page_message">This page has been added to your knapsack but not archived successfully. Would you like to archive this page now?</string>
+    <string name="archive_page_title">Save Page</string>
+    <string name="archive_page_message">This page has been added to your knapsack but not saved successfully. Would you like to saved this page now?</string>
     <string name="archive">Archive</string>
-    <string name="pref_wifi_only">Archive via WiFi only</string>
+    <string name="pref_wifi_only">Save via WiFi only</string>
 
     <string-array name="more">
         <item>Open</item>
