--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,12 +7,12 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="read"></string>
     <string name="unread">New</string>
-    <string name="notification_title">Saving Page</string>
+    <string name="notification_title">Saving page</string>
     <string name="notification_text">Saving - %s</string>
-    <string name="archived">Page Saved</string>
-    <string name="archive_error">Error Saving Page</string>
-    <string name="archiving">Saving Page</string>
-    <string name="setup_sync">Setup Sync</string>
+    <string name="archived">Page saved to Knapsack</string>
+    <string name="archive_error">Error saving page to Knapsack</string>
+    <string name="archiving">Saving page to Knapsack...</string>
+    <string name="setup_sync">Setup sync</string>
     <string name="sync">Sync</string>
     <string name="prefs">Settings</string>
     <string name="not_set">Sync not setup</string>
@@ -44,17 +44,20 @@
 
     <string name="purchase_call_to_action">Buy now</string>
     <string name="nag_thank_you">Thank you for installing Knapsack!</string>
-    <string name="delete_page_title">Delete Page</string>
+    <string name="delete_page_title">Delete page</string>
     <string name="delete_page_message">Are you sure you want to delete this page from your knapsack</string>
     <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
-    <string name="archive_page_title">Save Page</string>
+    <string name="archive_page_title">Save page</string>
     <string name="archive_page_message">This page has been added to your knapsack but not saved successfully. Would you like to saved this page now?</string>
     <string name="archive">Save</string>
     <string name="pref_wifi_only">Save via WiFi only</string>
     <string name="page_saved">Page saved</string>
     <string name="page_error">An error occurred while saving the page, please try again</string>
     <string name="page_loaded">Page loaded</string>
+    <string name="archiving_many">Saving page to Knapsack, %s remaining...</string>
+    <string name="archived_many">Page saved to Knapsack, %s remaining...</string>
+    <string name="archive_error_many">Error saving page to Knapsack, %s remaining</string>
 
     <string-array name="more">
         <item>Open</item>
