--- a/KnapsackApp/app/src/main/res/values/strings.xml
+++ b/KnapsackApp/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="archived_many">Page saved to Knapsack, %s remaining...</string>
     <string name="archive_error_many">Error saving page to Knapsack, %s remaining</string>
     <string name="resave_page">Resave page</string>
+    <string name="delete_page">Delete</string>
 
     <string-array name="more">
         <item>Open</item>
