--- a/KnapsackApp/app/src/main/res/values/strings.xml
+++ b/KnapsackApp/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="archive_error_many">Error saving page to Knapsack, %s remaining</string>
     <string name="resave_page">Resave page</string>
     <string name="delete_page">Delete</string>
+    <string name="open_source">Open Source</string>
 
     <string-array name="more">
         <item>Open</item>
